<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D2C4E9"
    tools:context=".MainActivity"
    tools:ignore="ExtraText">


    <ImageView
        android:id="@+id/connect_banner"
        android:layout_width="387dp"
        android:layout_height="126dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:contentDescription="@string/companylogodescription"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/conn1" />

    <TextView
        android:id="@+id/motto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/motto"
        android:textColor="#000"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/connect_banner" />

    <TextView
        android:id="@+id/about_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/about"
        android:textColor="#000"
        android:textSize="24sp"
        android:typeface="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motto" />

    <EditText
        android:id="@+id/aboutusText"
        android:layout_width="388dp"
        android:layout_height="97dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:gravity="start|top"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:text="@string/about_us_desc"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="italic"
        android:typeface="sans"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/about_textview"
        tools:ignore="LabelFor" />

    <ImageView
        android:id="@+id/phoneIcon"
        android:layout_width="48dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        app:layout_constraintEnd_toStartOf="@+id/phoneText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aboutusText"
        app:srcCompat="@drawable/phoneIcon" />

    <ImageView
        android:id="@+id/mailIcon"
        android:layout_width="40dp"
        android:layout_height="52dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintEnd_toStartOf="@+id/emailText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneIcon"
        app:srcCompat="@drawable/mail_icon" />

    <ImageView
        android:id="@+id/locationIcon"
        android:layout_width="59dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mailIcon"
        app:srcCompat="@drawable/location_icon" />

    <TextView
        android:id="@+id/footer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/footer"
        android:textColor="#000"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationText" />

    <EditText
        android:id="@+id/phoneText"
        android:layout_width="313dp"
        android:layout_height="46dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/phones"
        android:textColor="@android:color/background_dark"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/phoneIcon"
        app:layout_constraintTop_toBottomOf="@+id/aboutusText" />

    <EditText
        android:id="@+id/emailText"
        android:layout_width="322dp"
        android:layout_height="54dp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:text="@string/email"
        android:textColor="#0A0A0A"
        android:textSize="24sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mailIcon"
        app:layout_constraintTop_toBottomOf="@+id/phoneText" />

    <EditText
        android:id="@+id/locationText"
        android:layout_width="301dp"
        android:layout_height="69dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/address"
        android:textColor="@android:color/background_dark"
        android:textSize="18sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/locationIcon"
        app:layout_constraintTop_toBottomOf="@+id/emailText" />


</android.support.constraint.ConstraintLayout>